# inline_hook

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/swift/sandhook/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/droid/dx/: AnnotationId.java  AppDataDirGuesser.java  BinaryOp.java  Code.java  Comparison.java  Constants.java  DexMaker.java  FieldId.java  Label.java  Local.java  MethodId.java  TypeId.java  TypeList.java  UnaryOp.java
app/src/main/java/com/droid/dx/stock/: ProxyBuilder.java
app/src/main/java/com/droid/internal/util/: XmlUtils.java
app/src/main/java/com/swift/sandhook/: FirstFragment.kt  Main.java  MainActivity.kt  SecondFragment.kt
app/src/main/java/ext/org/apache/commons/lang3/: ArrayUtils.java  CharSequenceUtils.java  CharUtils.java  ClassUtils.java  JavaVersion.java  ObjectUtils.java  StringUtils.java  SystemUtils.java  (+1 more)
app/src/main/native/: CMakeLists.txt  main.cc  main.h
app/src/main/native/common/: dlfcn_nougat.cc  elf_util.cc  log.h
app/src/main/native/include/: inline_hook.h
app/src/main/native/inline/arm32/: inline_hook_arm32.cpp
app/src/main/native/inline/arm64/: inline_hook_arm64.cc
app/src/main/native/instrcache/arm32/: translator.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/swift/sandhook/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+15 files in other folders)
